# erust-weather-station

./: .gitignore  .gitmodules  Cargo.toml  memory.x
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: cargo-build.yaml
cross/: Cargo.toml
cross/.cargo/: config.toml
cross/app/: Cargo.toml
cross/app/src/: board.rs  buttons.rs  charger.rs  co2.rs  env.rs  error.rs  main.rs  screen.rs  station_data.rs  system_time.rs  types.rs  usb.rs
cross/app/src/board/: env.rs  hardware.rs  mod.rs  usb.rs
cross/app/src/ui/: state.rs  view.rs
firmware/: Cargo.toml
firmware/src/: buttons.rs  charger.rs  co2.rs  error.rs  lib.rs  screen.rs  station_data.rs  time.rs  types.rs
firmware/src/ui/: mod.rs  state.rs  view.rs
hardware/: power_consumption.txt
hardware/main_board/: controls_lcd.kicad_sch  fp-lib-table  main_board.kicad_pcb  main_board.kicad_prl  main_board.kicad_pro  main_board.kicad_sch  mcu.kicad_sch  mcu_lcd_controls.kicad_sch  power.kicad_sch  sym-lib-table
hardware/scd_sensor/: fp-lib-table  scd_sensor.kicad_pcb  scd_sensor.kicad_pro  scd_sensor.kicad_sch  sym-lib-table
hardware/shared/: Project_Components.kicad_sym
hardware/shared/Project_Footprints.pretty/: RGE0024H.kicad_mod  RGE0024H_NV.kicad_mod  SAMTEC_FTSH-105-01-L-D-RA-K.kicad_mod  SAMTEC_FTSH-105-XX-X-DV.kicad_mod
src/: backlight.rs  board.rs  buttons.rs  charger.rs  co2.rs  display.rs  env.rs  error.rs  hal_compat.rs  hal_i2c.rs  hd44780.rs  main.rs  screen.rs  st7036.rs  station_data.rs  system_time.rs  types.rs  usb.rs
src/board/: board_usb.rs  hardware.rs  mod.rs  statics.rs  usb.rs
src/microhal/: adc.rs  exti.rs  gpio.rs  i2c.rs  mod.rs  rcc.rs  timer.rs
src/microhal/rcc/: config.rs  lptim.rs  reset_enable.rs
src/microhal/timer/: lptim.rs  timers.rs
src/ui/: view.rs
