[package]
name = "weather-station"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-scheduler = { git = "https://github.com/rblaze/rust-async-scheduler.git" }
bq24259 = { git = "https://github.com/rblaze/erust-bq24259.git" }
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
critical-section = { version = "1.1" }
embedded-hal = "1.0"
embedded-hal-bus = "0.1"
fugit = "0.3"
futures = { version = "0.3", default-features = false, features = ['async-await']}
lcd = { git = "https://github.com/rblaze/erust-lcd.git" }
nb = "1.1"
num = { version = "0.4", default-features = false }
once_cell = { version = "1.19", default-features = false, features = [
    "critical-section",
] }
portable-atomic = { version = "1", default-features = false, features = [
    "unsafe-assume-single-core",
] }
stm32g0xx-hal = { version = "0.2", features = ["stm32g071", "rt"] }
void = { version = "1", default-features = false }

# panic-halt = "0.2.0"
panic-probe = { version = "0.3", features = ["print-rtt"] }
rtt-target = "0.5"

[[bin]]
name = "weather-station"
test = false
bench = false
doctest = false
