[package]
name = "weather-station"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-scheduler = { git = "https://github.com/rblaze/rust-async-scheduler.git" }
# async-scheduler = { path = "../rust-async-scheduler/" }
bq24259 = { git = "https://github.com/rblaze/erust-bq24259.git" }
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
critical-section = "1"
embedded-hal = "1.0"
embedded-hal-bus = "0.2"
fugit = "0.3"
futures = { version = "0.3", default-features = false, features = [
    "async-await",
] }
lcd = { git = "https://github.com/rblaze/erust-lcd.git" }
once_cell = { version = "1", default-features = false, features = [
    "critical-section",
] }
portable-atomic = { version = "1", default-features = false, features = [
    "unsafe-assume-single-core",
] }
rtt-target = "0.6"
stm32g0-hal = { git = "https://github.com/rblaze/erust-stm32g0-hal.git", features = [
    "stm32g0b1",
] }
# stm32g0-hal = { path = "../erust-stm32g0-hal/", features = ["stm32g0b1"] }

[[bin]]
name = "weather-station"
test = false
bench = false
doctest = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true      # symbols are nice and they don't increase the size on Flash
lto = true        # better optimizations
opt-level = "s"

[profile.dev]
incremental = false
codegen-units = 1   # better optimizations
opt-level = "s"
