[package]
name = "firmware"
version = "0.1.0"
edition = "2024"

[dependencies]
async-scheduler = { git = "https://github.com/rblaze/rust-async-scheduler.git" }
bq24259 = { git = "https://github.com/rblaze/erust-bq24259.git" }
embedded-hal = "1"
fugit = "0.3"
futures = { version = "0.3", default-features = false, features = [
    "async-await",
] }
lcd = { git = "https://github.com/rblaze/erust-lcd.git" }
# lcd = { path = "../erust-lcd/" }
rtt-target = "0.6"
sensirion = { git = "https://github.com/rblaze/erust-sensirion.git" }
# sensirion = { path = "../erust-sensirion/" }
sensirion-gas-index-algorithm-rs = { git = "https://github.com/Sensirion/gas-index-algorithm.git", default-features = false }
# sensirion-gas-index-algorithm-rs = { path = "../gas-index-algorithm/sensirion-gas-index-algorithm-rs", default-features = false }
thiserror = { version = "2", default-features = false }
